--- a/discretion_mapping_2.Rmd
+++ b/discretion_mapping_2.Rmd
@@ -51,6 +51,12 @@ class: center
 * 12 - 18 month long project deconstructing and analzying case management and supervision policy, practices, and programs through an equity lens.
 
 
+---
+# The Ask: Diagram
+.center[![:scale 85%  ](img/Diagram of Discretion.jpg)]
+
+
+
 
 
 
