--- a/discretion_mapping_2.Rmd
+++ b/discretion_mapping_2.Rmd
@@ -180,4 +180,17 @@ library(xaringan)
 
 .center[![](img/team_awesome.gif)]
 
+---
+# Additional Reading/Videos
+
+* [Amazon Web Services](https://aws.amazon.com/free/?sc_channel=PS&sc_campaign=acquisition_US&sc_publisher=google&sc_medium=ACQ-P%7CPS-GO%7CBrand%7CDesktop%7CSU%7CCore%7CCore%7CUS%7CEN%7CText&sc_content=Brand_Core_bmm&sc_detail=%2Bamazon.%20%2Bweb%20%2Bservices&sc_category=Core&sc_segment=293614486518&sc_matchtype=b&sc_country=US&s_kwcid=AL!4422!3!293614486518!b!!g!!%2Bamazon.%20%2Bweb%20%2Bservices&ef_id=Cj0KCQjwpsLkBRDpARIsAKoYI8zTIwZYQShraMo1AcqMmNTu8W-HtylKiQwEpzrYvxjFnLBrPt25-CQaAo0pEALw_wcB:G:s)
+
+* [Mailchimp Newsletter Software](https://mailchimp.com/?gclsrc=aw.ds&ds_rl=1260419&ds_rl=1260446&ds_rl=1260763&ds_rl=1260763&gclid=Cj0KCQjwpsLkBRDpARIsAKoYI8xUF1WkrRgb8j47IIkGoPQpfcJKtSk4fS35ldz_64l092h8AvBPeRQaAvcdEALw_wcB&gclsrc=aw.ds)
+
+* [Agile methods](https://www.youtube.com/watch?v=ZZ_vnqvW4DQ)
+
+* [Git hub](https://www.youtube.com/watch?v=w3jLJU7DT5E)
+
+* [Website based Deliverable] goal(https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/sexualoffendingvictimisationandthepaththroughthecriminaljusticesystem/2018-12-13)
+
 
